--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
-body{
-    background: gold;
+/* root property realy shows the Global variables or custom properties */
+:root{
+    --color-primary: #2584ff;
+    --color-secondary: #00d9ff;
+    --color-accent: #ff3400;
+    --color-headings: #1b0760;
+    --color-body: #918ca4;
 }
