--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,11 @@
     --color-accent: #ff3400;
     --color-headings: #1b0760;
     --color-body: #918ca4;
+    --color-border:#ccc;
+}
+
+*, *::after, *::before{
+    box-sizing: border-box;
 }
 /* Typography */
 html{
@@ -77,4 +82,173 @@ a{
     .link-arrow{
         font-size: 1.5rem;
     }
+}
+
+/* Badges */
+
+.badge{
+    border-radius: 20px;
+    padding: 0.5rem 2rem;
+    font-weight: bold;
+    white-space: nowrap;
+    font-size: 2rem;
+}
+
+.badge--small{
+    font-size: 1.6rem;
+}
+
+
+.badge--primary{
+    background-color: var(--color-primary);
+    color: #fff;
+}
+
+.badge--secondary{
+    background-color: var(--color-secondary);
+    color: #fff;
+}
+
+@media screen and (min-width: 1024px){
+    .badge{
+        font-size: 1.5rem;
+    }
+
+    .badge--small{
+        font-size: 1.2rem;
+    }
+}
+
+
+/* Lists */
+
+.list{
+    list-style-type: none;
+    padding-left: 0;
+    color: var(--color-headings);
+}
+
+.list--inline .list__item{
+    display: inline-block;
+    margin-right: 2rem;
+}
+
+.list--tick{
+    list-style-image: url(../images/1398911_correct_mark_success_tick_valid_icon.svg);
+    padding-left: 3rem;
+}
+
+.list--tick .list__item{
+    padding-left: 0.5rem;
+    margin-bottom: 1rem;
+}
+
+@media screen and (min-width: 1024) {
+    .list--tick .list__item{
+        padding-left: 0;
+    }
+    
+}
+
+
+
+/* Icons */
+
+.icon {
+    width: 40px;
+    height: 40px;
+}
+
+.icon--primary{
+    fill: var(--color-primary);
+}
+
+.icon-container{
+    align-items: center;
+    background: #f3f9fa;
+    border-radius: 100%;
+    display: inline-flex;
+    height: 64px;
+    justify-content: center;
+    width: 64px;
+}
+
+/* Buttons */
+
+.btn{
+    font-size: 1.8rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    padding: 2rem 3rem;
+    border: 0;
+    border-radius: 40px;
+    text-align: center;
+    cursor: pointer;
+    white-space: nowrap;
+    margin: 1rem 0;
+}
+
+.btn--primary{
+    background-color: var(--color-primary);
+    color: #fff;
+}
+
+.btn--primary:hover{
+    /* background-color: lighten(primary, 10%); */
+    background: #3a8ffd;
+}
+
+.btn--secondary{
+    background-color: var(--color-secondary);
+    color: #fff;
+}
+
+.btn--secondary:hover{
+    background: #00c8eb;
+}
+.btn--accent{
+    background: var(--color-accent);
+    color: #fff;
+}
+
+.btn--accent:hover{
+    background: #ec3000;
+    /* background: lighten(accent, 80%); */
+}
+
+.btn--block{
+    width: 100%;
+    display: inline-block;
+}
+
+@media screen and (min-width: 1024px){
+    .btn{
+        font-size: 1.5rem;
+    }
+}
+
+/* inputs */
+
+.input{
+    border-radius: 40px;
+    border: 1px solid var(--color-border);
+    color: var(--color-headings);
+    font-size: 2rem;
+    outline: 0;
+    padding: 1.5rem 2rem;
+}
+
+::placeholder{
+    color: #cdcbd7;
+}
+
+.input-group{
+    border: 1px solid var(--color-border);
+}
+
+@media screen and (min-width: 1024px) {
+    ::placeholder{
+        font-size: 1.5rem;
+    }
+    
 }
