building card component

--- a/css/styles.css
+++ b/css/styles.css
@@ -269,3 +269,27 @@ a{
     }
     
 }
+
+/* card */
+
+.card{
+    border-radius: 7px;
+    box-shadow: 0 0 20px 10px #f3f3f3;
+    /* the following rule bring back the round corner for the corner because the background color for the header has grown bigger than the header normal size. */
+    overflow: hidden;
+}
+
+.card__header,
+.card__body{
+    padding: 2rem 3rem;
+}
+
+.card--primary .card__header{
+    background: var(--color-primary);
+    color: #fff;
+}
+
+.card--secondary .card__header{
+    background: var(--color-secondary);
+    color: #fff;
+}
