testimonial and spriting new icon images

--- a/components/quote.html
+++ b/components/quote.html
@@ -8,7 +8,7 @@
       <div class="media__image">
         <svg class="icon icon--primary quote__line">
           <!-- adding location for loading icon from our svg files. images/sprite.svg -->
-          <use xlink:href="images/sprite.svg#103448_computer_accept_icon"></use>
+          <use xlink:href="images/sprite.svg#computer"></use>
         </svg>
       </div>
       <div class="media__body">
