--- a/css/styles.css
+++ b/css/styles.css
@@ -162,8 +162,17 @@ a{
     height: 40px;
 }
 
+.icon-small{
+    width: 30px;
+    height: 30px;
+}
+
 .icon--primary{
     fill: var(--color-primary);
+}
+
+.icon--white{
+    fill: #fff;
 }
 
 .icon-container{
@@ -174,6 +183,10 @@ a{
     height: 64px;
     justify-content: center;
     width: 64px;
+}
+
+.icon-container--accent{
+    background-color: var(--color-accent);
 }
 
 /* Buttons */
@@ -374,6 +387,7 @@ a{
     margin-top: 0;
 }
 
+
 .media__body{
     margin: 0 2rem;
 }
@@ -449,4 +463,36 @@ a{
     .grid--1x3{
         grid-template-columns: repeat(3, 1fr);
     }
+}
+
+/* testimonial */
+
+.testimonial{
+    padding: 3rem;
+}
+.testimonial__image{
+    position: relative;
+}
+
+.testimonial__image > img{
+    width: 100%;
+}
+
+.testimonial__image > .icon-container{
+    position: absolute;
+    top: 3rem;
+    right: -32px;
+}
+
+@media screen and (min-width: 768px) {
+    .testimonial .quote,
+    .testimonial .quote__author
+    {
+        font-size: 2.4rem;
+    }
+
+    .testimonial .quote{
+        margin-left: 6rem;
+    }
+    
 }
