--- a/css/styles.css
+++ b/css/styles.css
@@ -551,3 +551,36 @@ a{
     }
     
 }
+
+/* collapsible styles part. */
+
+.collapsible__header{
+    display: flex;
+    justify-content: space-between;
+
+}
+.collapsible__heading{
+    margin-top: 0;
+    font-size: 3rem;
+}
+
+.collapsible__right{
+    transform: rotate(90deg);
+}
+
+.collapsible__content{
+    max-height: 0;
+    overflow: hidden;
+    opacity: 0;
+    transition: all 0.3s;
+}
+
+.collapsible--expanded .collapsible__right{
+    transform: rotate(0);
+    transition: transform 0.7s;
+}
+
+.collapsible--expanded .collapsible__content{
+    max-height: 100vh;
+    opacity: 1;
+}
