--- a/css/styles.css
+++ b/css/styles.css
@@ -627,3 +627,74 @@ a{
     max-width: 1140px;
     margin: 0 auto;
 }
+
+/* NAV */
+.nav{
+    background-color: #000;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0 1rem;
+    align-items: center;
+}
+
+.nav img {
+    width: 50px;
+}
+
+.nav__list {
+    width: 100%;
+    margin: 0;
+}
+
+.nav__item {
+    padding: 0.5rem 2rem;
+    border-bottom: 1px solid #222;
+}
+
+.nav__item > a {
+    color: #d2d0db;
+}
+
+.nav__item > a:hover {
+    color: #fff;
+    transition: color 0.3s;
+}
+
+.nav__toogler {
+    fill: #fff;
+    opacity: 0.5;
+    transition: box-shadow 0.15s;
+    cursor: pointer;
+}
+
+.nav.collapsible--expanded .nav__toogler {
+    opacity: 1;
+    box-shadow: 0 0 0 3px #666;
+    border-radius: 5px;
+}
+
+.nav__brand {
+    transform: translateY(2px);
+}
+
+@media screen and (min-width: 768px) {
+    .nav__toogler {
+        display: none;
+    }
+
+    .nav__list {
+        width: auto;
+        display: flex;
+        font-size: 1.6rem;
+
+        /* to make the collapible content visible we should set max-height to 100%, because the element list of the navigation should be always visible. */
+        max-height: 100%;
+        opacity: 1;
+    }
+
+    .nav__item {
+        border: 0;
+    }
+    
+}
