collecting syntax error in css

--- a/css/styles.css
+++ b/css/styles.css
@@ -552,7 +552,7 @@ a{
     
 }
 
-//* This part styles the collapsible component. */
+/* This part styles the collapsible component. */
 
 /* Styles for the header of the collapsible section */
 .collapsible__header {
