--- a/css/styles.css
+++ b/css/styles.css
@@ -146,7 +146,7 @@ a{
     margin-bottom: 1rem;
 }
 
-@media screen and (min-width: 1024) {
+@media screen and (min-width: 1024px) {
     .list--tick .list__item{
         padding-left: 0;
     }
