adding line icon before the name

--- a/components/quote.html
+++ b/components/quote.html
@@ -6,10 +6,14 @@
   <footer>
     <div class="media">
       <div class="media__image">
-        <svg class="icon icon--primary quote__line">
-          <!-- adding location for loading icon from our svg files. images/sprite.svg -->
-          <use xlink:href="images/sprite.svg#computer"></use>
-        </svg>
+        <!-- <svg class="icon icon--primary quote__line"> -->
+        <!-- adding location for loading icon from our svg files. images/sprite.svg -->
+        <img
+          class="icon icon primary quote__line"
+          src="images/line.svg"
+          alt=""
+        />
+        <!-- </svg> -->
       </div>
       <div class="media__body">
         <h3 class="media__title quote__author">Fablo Wagana</h3>
