plan block and features design

--- a/components/plan.html
+++ b/components/plan.html
@@ -1,5 +1,5 @@
 <div style="width: 50%; padding: 4rem">
-  <divl class="plan plan--popular">
+  <div class="plan plan--popular">
     <div class="card card--secondary">
       <!-- the reason for using under score for class name card__header is because the header is the element inside this block, so it can not exist on it's own outside of this block or outside of this component. -->
       <header class="card__header">
@@ -19,5 +19,5 @@
         <button class="btn btn--outline btn--block">Buy Now</button>
       </div>
     </div>
-  </divl>
+  </div>
 </div>
