--- a/css/styles.css
+++ b/css/styles.css
@@ -311,6 +311,10 @@ a{
     box-shadow: 0 0 20px 10px #f3f3f3;
     /* the following rule bring back the round corner for the corner because the background color for the header has grown bigger than the header normal size. */
     overflow: hidden;
+   
+}
+.card--primary .badge--primary{
+    background: #126de4;
 }
 
 .card__header,
@@ -333,6 +337,9 @@ a{
 }
 
 /* plans */
+.plan{
+    transition: transform 0.2s ease-out;
+}
 
 .plan__name{
     color: #fff;
@@ -363,6 +370,10 @@ a{
     margin-bottom: 2rem;
 }
 
+.plan--popular{
+    transform: scale(1.1);
+}
+
 .plan--popular .card__header{
     position: relative;
    
@@ -375,9 +386,13 @@ a{
     position: absolute;
     top: -6px;
     right: 5%;
-
 }
-
+.plan:hover{
+    transform: scale(1.05);
+}
+.plan:hover{
+    transform: scale(1.15);
+}
 @media screen and (min-width: 1024px) {
     .plan__name{
         font-size: 1.4rem;
@@ -760,4 +775,36 @@ a{
         grid-template-columns: repeat( auto-fit, minmax(10rem, 1fr));
     }
     
+}
+
+/* plan block */
+.block-plans .grid{
+    gap: 8rem 8rem; 
+}
+
+.block-plans .card{
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+/* Features */
+
+.feature{
+    gap: 4rem 8rem;
+    margin: 12rem 0;
+}
+.feature:first-of-type{
+    margin-top: 6rem;
+}
+.feature__heading{
+    margin: 1rem 0;
+}
+.feature__image{
+    width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+    .feature:nth-of-type(even) .feature__content{
+        order: 2;
+    }
 }
