--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,10 @@
     box-sizing: border-box;
 }
 /* Typography */
+::selection{
+    background: var(--color-primary);
+    color: #fff;
+}
 html{
     /* 62.5% of 16px = 10px */
     font-size: 62.5%;
@@ -38,6 +42,7 @@ h2{
 }
 h3{
     font-size: 3rem;
+    font-weight: 500;
 }
 p{
     margin-top: 0;
@@ -129,7 +134,6 @@ a{
 .list{
     list-style-type: none;
     padding-left: 0;
-    color: var(--color-headings);
 }
 
 .list--inline .list__item{
@@ -140,6 +144,7 @@ a{
 .list--tick{
     list-style-image: url(../images/1398911_correct_mark_success_tick_valid_icon.svg);
     padding-left: 3rem;
+    color: var(--color-headings);
 }
 
 .list--tick .list__item{
@@ -414,6 +419,7 @@ a{
 /* media */
 .media{
     display: flex;
+    margin-bottom: 4rem;
 }
 
 .media__title{
@@ -629,6 +635,7 @@ a{
 
 .block__header {
     text-align: center;
+    margin-bottom: 4rem;
 }
 .block__heading{
     margin-top: 0;
@@ -639,14 +646,17 @@ a{
     color: #fff;
 }
 
-.block--dark .block__heading{
+.block--dark h1,
+.block--dark h2,
+.block--dark h3
+{
     color: #fff;
 }
 
 .block--skewed-right{
     padding-bottom: calc(var(--padding-vertical) + 4rem);
     /* the following design is made from #nte address https://bennettfeely.com/clippy/ */
-    clip-path: polygon(0 0, 100% 0%, 100% 80%, 0 100%);
+    clip-path: polygon(0 0, 100% 0%, 100% 90%, 0 100%);
 }
 
 .container {
@@ -806,5 +816,23 @@ a{
 @media screen and (min-width: 768px) {
     .feature:nth-of-type(even) .feature__content{
         order: 2;
+    }
+}
+
+/* showcase block */
+.block-showcase__image > img{
+    width: 100%;
+}
+@media screen and (min-width: 768px) {
+    .block-showcase .grid{
+        grid-template-columns: 50% 50%;
+    }
+
+    .block-showcase__image{
+        justify-self: end;
+    }
+    .block-showcase__image > img{
+        width: auto;
+        max-width: 700px;
     }
 }
