Add parcel for build

--- a/css/styles.css
+++ b/css/styles.css
@@ -471,7 +471,7 @@ a{
     bottom: 10px;
 }
 
-@media screen and (min-width: 1024) {
+@media screen and (min-width: 1024px) {
     .quote{
         font-size: 2rem;
     }
